# xFindAPI

./: .env.example  README.md  exemplo.py  pyproject.toml
xfind/core/: config.py  server.py
xfind/main/: app.py
xfind/main/routes/: __init__.py
xfind/main/routes/cpf/: __init__.py
xfind/services/: aiohttp_helper.py
xfind/services/cryptograph/: jwt_barrer.py  jwt_helper.py
xfind/sipni_sdk/: __init__.py  config.json
xfind/sipni_sdk/exceptions/: __init__.py
xfind/sipni_sdk/models/: person.py  token.py
